# matrix-profile

./: .dockerignore  .gitignore  00-utils-functions.R  01-preliminary-analysis.R  02-annotation-vector.R  CITATION.cff  Dockerfile  LICENSE.md  Makefile  README.md  RLMP.R  Untitled.R  aamp.R  app.R  data_comparison.csv  df_mp_univariate.RData  drafts.docx  manual_computation.R  matrix_profile python  pyproject.toml  requirements.txt
CMP/: (OLD)  Plot_Summary.R  (OLD) Plot context cluster matrix.R  (OLD) Temperature_dependent.R  0 - MP_Demo.R  0-Polito_Usecase_Demo.R  1 - Preprocessing.R  1-Polito_Usecase_Preprocessing.R  10 - start ditriribution.R  2 - Groups_Definition_Cluster.R  2 - Time_Windows_Definition.R  3 - Groups_Definition_Cluster.R  3 - Time_Windows_Definition.R  3.2-Polito_Usecase_Groups_Cluster.R  4 - Plots_CMP.R  4 - Polito_Usecase_Plots.R  4 - Temperature_dependent.R  5 - Plot_Summary_Profiles.R  5.1 - Plots_AD_Methods.R  5.2 - Plots_CMP.R  5.3 - Plot_Summary.R  5.4 - Plot_Summary_Profiles.R  5.5 - Plot context cluster matrix.R  6 - Plot Calendar Results.R  6 - Polito_Usecase_Plots_results_summary.R  7 - Plots_AD_Methods.R  8 - Diagnosis.R  9 - Diagnosis result summary.R  Polito_Usecase.py  Untitled.R  anomaly_detection_functions.py  calendarHeat.R  energy_anomaly_detection_functions.py  global_vars.R  main.R  temperature_anomaly_detection_functions.py
Paper/: matrix-profile.docx  matrix-profile_070122.docx  ~$trix-profile.docx
Paper/images/: Fig 10 -CMP result@3x.png~HEAD  tt.txt  (+4 more)
Python_project/: PMP.py  euclidean_MP.py
R _project/: 00-dataset-preprocessing.R  00-setup.R  01-preliminary-analysis.R  04-NN-euclidean.R  comparison-bagging.R  visualization.R
Roberto Chiosa/: matrix-profile-draft.docx
Simone Deho/: contexts_clusters_annotated.xlsx
Simone Vitale/: AV_framework.R  AV_framework_1.R  AV_plot_support.R  AV_plot_supporto.R  AV_powerP.pptx  CART_Optimization.R  README.txt  clc.R  dati.R  euclidean_MP.R  euclidean_MP_tm.R  explore_make_AV.R  make_AV.R  prova_MP.R
data/: df.csv  mp_pure.csv  mp_univariate_total_05ex_w96.RData
docs/: ref.bib
figures/: Plot2.html  Plot3.html  Plot5.html
manuscript/: Manuscript.docx  ~$nuscript.docx
presentations/: 2021_05_13_MP_proposal.pptx
(+1886 files in other folders)
