[tool.poetry]
name = "cmp"
version = "0.1.0"
description = ""
authors = ["RobertoChiosa <roberto.chiosa@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src/cmp" },
    { include = "src/distancematrix" },
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
pandas = "^2.2.2"
plotly = "^5.22.0"
scipy = "^1.14.0"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
kneed = "^0.8.5"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

